export vec3, mat4 from glfx

--- a/sample/basic.html
+++ b/sample/basic.html
@@ -26,6 +26,7 @@
         
         <script type="text/javascript">
             function start() {
+                const vec3 = window.glfx.vec3;
                 const glfx = window.glfx.glfx;
 
                 function wglScene() {
